<resources>
    <string name="app_name">ViajeSeguro</string>
    <string name="Titulo">VIAJE SEGURO</string>
    <string name="contra">Ingresa tu Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="salir">Salir</string>
    <string name="usuario">Selecciona el Usuario</string>
    <string name="inicio">Inicio</string>
    <string name="mapa">Mapa</string>
    <string name="sectores">Sectores</string>
    <string name="ayuda">Ayuda</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="foro">Foro</string>
    <string name="registrar">Reporte de Incidente</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_l">MenuL</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
</resources>