<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="111dp"
        android:text="@string/Titulo"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spnUsuarios"
        app:layout_constraintStart_toStartOf="@+id/spnUsuarios"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <Spinner
        android:id="@+id/spnUsuarios"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/edtContrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <EditText
        android:id="@+id/edtContrasenia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="78dp"
        android:ems="10"
        android:hint="@string/contra"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnUsuarios" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="218dp"
        android:onClick="salir"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnIngresar"
        app:layout_constraintTop_toBottomOf="@+id/edtContrasenia" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="40dp"
        android:onClick="ingresar"
        android:text="@string/ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSalir"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chbxRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="271dp"
        android:text="Recordar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContrasenia" />

</androidx.constraintlayout.widget.ConstraintLayout>